--- a/tests/requirements.yml
+++ b/tests/requirements.yml
@@ -1,3 +1,3 @@
-- src: git+ssh://git@github.com/leucos/ansible-gcloud.git
+- src: https://github.com/devops-works/ansible-sysctl.git
   name: ansible-sysctl
 
